# PasswordManager_Cpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/Cloud_Storage/: CMakeLists.txt
libs/Cloud_Storage/include/cloud_storage/: google_drive.hpp  storage.hpp
libs/Cloud_Storage/src/: google_drive.cpp  storage.cpp
libs/Cloud_Storage/tests/: CMakeLists.txt  google_drive.cpp  upload.cpp
libs/Database/: CMakeLists.txt
libs/Database/include/database/: database.hpp  sqlite3.hpp
libs/Database/src/: database.cpp  sqlite3.cpp
libs/Database/tests/: CMakeLists.txt  database.cpp  sqlite3.cpp
libs/Database/tests/data/: test.db
libs/GUI/: CMakeLists.txt
libs/GUI/include/GUI/: menus.hpp  windows.hpp
libs/GUI/src/: menus.cpp  windows.cpp
src/: PasswordManager.cpp  main.cpp
